--- a/public/views/home.html
+++ b/public/views/home.html
@@ -7,21 +7,23 @@
 		</div>
 		<h4>World's Worst Travel Guide</h4>
 		<h5 id="cityName">New Orleans</h5>
-		<h6 id="cityMission"><span class="underLine">City Mission</span>: Explore New Orleans as we do. <span class="underLine">Drink</span> much, <span class="underLine">eat</span> well, and <span class="underLine">fuck</span> around</h6>
+		<h6 id="cityMission"><span class="underLine">City Mission:</span> Explore New Orleans as we do. <span class="underLine">Drink</span> much, <span class="underLine">eat</span> well, and <span class="underLine">fuck</span> around</h6>
 		<div class="gif-container" >
 			<img class="img-responsive" src="http://az616578.vo.msecnd.net/files/2016/03/08/6359305555504029971141038659_big-freedia-208-venice-parade-oh-yass-gif.gif"/>
 		</div>
 	</div>	
-	<div class="col-xs-12 col-sm-6">
+	<div class="col-xs-12 col-sm-6 DARES">
 		<div class="dare-container" ng-repeat="dare in dares">
-			<div class="row">	
-				<h6>{{dare.place}} {{dare.description}} {{dare.points}}</h6>
+			<div class="row individual-dare">	
+				<h6><span class="underLine">Location:</span> {{dare.place}}</h6>
+				<h6><span class="underLine">Challenge:</span> {{dare.description}}</h6>
+				<h6><span class="underLine">Points:</span> {{dare.points}}</h6>
 			</div>
 		</div>	
 	</div>
 </div>
-<div class="row">
+<!-- <div class="row">
   <div id="map"></div>
-</div>	
+</div>	 -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC5PIdkx0leUj4LLCnaRIbnEeEuN-BSwKE&callback=initMap"
     async defer></script>
