google maps API angular directive integration

--- a/public/views/home.html
+++ b/public/views/home.html
@@ -5,6 +5,7 @@
 			<h1>BAD</h1>
 			<h1>CITY</h1>
 		</div>
+		
 		<h4>World's Worst Travel Guide</h4>
 		<h5 id="cityName">New Orleans</h5>
 		<h6 id="cityMission"><span class="underLine">City Mission:</span> Explore New Orleans as we do. <span class="underLine">Drink</span> much, <span class="underLine">eat</span> well, and <span class="underLine">fuck</span> around</h6>
@@ -23,8 +24,7 @@
 		</div>	
 	</div>
 </div>
-<!-- <div class="row">
-  <div id="map"></div>
-</div>	 -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC5PIdkx0leUj4LLCnaRIbnEeEuN-BSwKE&callback=initMap"
-    async defer></script>
+
+<ui-gmap-google-map center="map.center" zoom="map.zoom" options="options"></ui-gmap-google-map>
+
+ 
