added custom pin and some better styling for maps

--- a/public/views/home.html
+++ b/public/views/home.html
@@ -26,7 +26,12 @@
 		</div>
 	</div>
 </div>
-<ui-gmap-google-map center="map.center" zoom="map.zoom" options="options"></ui-gmap-google-map>
+<ui-gmap-google-map center="map.center" zoom="map.zoom" options="options">
+        <ui-gmap-marker coords="marker.coords" options="marker.options" idkey="marker.id">
+        </ui-gmap-marker>
+<!--         <ui-gmap-marker coords="marker.coords" options="marker.options" events="marker.events" idkey="marker.id">
+        </ui-gmap-marker>    -->     
+</ui-gmap-google-map>
 <div class="customFooter">
 	<p>2016 Bad Spring Creative</p>
 </div>	
