--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,14 @@
+.logo-tagline-container{
+	margin-left: 50px;
+}
+.gif-container{
+	top: 190px;
+}
 .purple-container{
+	padding-top: 150px;
 	background-color: #7A7AA5;
 	display: block;
+	color: black;
 }
 body {  
 	font-family: 'Abel';
@@ -13,7 +21,7 @@ body {
  	margin-top: 0px;
  	margin-bottom: 0px;
  	font-weight: 900;
- 	font-size: 60px;
+ 	font-size: 70px;
  }
  h5{
  	font-weight: 900;
@@ -22,6 +30,7 @@ body {
  	padding-top: 4px;
  	padding-bottom: 4px;
  	padding-left: 4px;
+ 	font-size: 18px;
  }
  h4{
  	font-size: 30px;
@@ -38,9 +47,11 @@ body {
  }
  #cityMission{
  	font-family: 'Source Code Pro';
- 	font-size: 14px;
+ 	color: black;
+ 	font-size: 15px;
  	line-height: 24px;
  	margin-bottom: 25px;
+ 	margin-left: -17px;
  }
  .logo-container{
  	margin-top: 25px;
@@ -54,11 +65,19 @@ body {
  	font-size: 14px;	
  }
  .DARES{
- 	width: 600px;
+ 	width: 930px;
  	margin: auto;
  }
  .DARES h6{
- 	font-size: 24px;
+ 	font-size: 22px;
+ }
+ .DARES h1{
+ 	font-family: 'Source Code Pro';
+ }
+ .individual-dare{
+ 	border-style: solid;
+ 	border-width: 1px;
+ 	padding: 80px 80px;
  }
  .individual-dare{
  	margin-bottom: 25px;
@@ -88,4 +107,13 @@ body {
 .customFooter p{
 	padding-top: 25px;
 	margin-left: 100px;
+}
+.challenges{
+	padding-top: 250px;
+}
+.challenges h1{
+	margin-bottom: 15px;
+	text-align: center;
+	font-size: 38px;
+	color: black;
 }
