--- a/public/views/home.html
+++ b/public/views/home.html
@@ -4,6 +4,7 @@
 		<h6>CITY</h6>
 	</div>
 	<div class="col-xs-2">
+		<h6>{{points}}</h6>
 		<h6>All Time</h6>
 		<h6>This Weekend</h6>
 	</div>	
@@ -36,7 +37,8 @@
 				<div class="col-xs-11">
 					<h6><span class="underLine">Location:</span> {{dare.place}}</h6>
 					<h6><span class="underLine">Challenge:</span> {{dare.description}}</h6>
-					<h6><span class="underLine">Points:</span> {{dare.points}}</h6>	
+					<h6><span class="underLine">Points:</span> {{dare.points}}</h6>
+					<a ng-click="upVote($index);"><h6>UP VOTE</h6></a>	
 				</div>
 			</div>
 		</div>	
