--- a/public/views/home.html
+++ b/public/views/home.html
@@ -37,8 +37,18 @@
 				<div class="col-xs-11">
 					<h6><span class="underLine">Location:</span> {{dare.place}}</h6>
 					<h6><span class="underLine">Challenge:</span> {{dare.description}}</h6>
-					<h6><span class="underLine">Points:</span> {{dare.points}}</h6>
-					<a ng-click="upVote($index);"><h6>UP VOTE</h6></a>	
+					<h6><span class="underLine">Points:</span> {{dare.points}}</h6>					
+				</div>
+				<div class="row button-dare">
+					<div class="arrow-container">
+						<a ng-click="upVote($index);"><img class="img-responsive" src="../assets/up.png"/></a>
+					</div>
+					<div class="arrow-container">	
+						<a ng-click="upVote($index);"><img class="img-responsive" src="../assets/down.png"/></a>
+					</div>	
+					<div class="arrow-container lightning-container">	
+						<a ng-click="lightning($index);"><img class="img-responsive" src="../assets/flash-lightning-bolt.png"/></a>
+					</div>						
 				</div>
 			</div>
 		</div>	
