--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,14 +1,21 @@
 .logo-tagline-container{
-	margin-left: 50px;
+	width: 500px;
+	margin: auto;
+	text-align: center;
+}
+.logo-tagline-container h4{
+	font-size: 40px;
+	color: white;
 }
 .gif-container{
 	top: 190px;
 }
 .purple-container{
 	padding-top: 150px;
-	background-color: #7A7AA5;
+	/*background-color: #7A7AA5;*/
 	display: block;
 	color: black;
+	background:url('../assets/hero_image_stiched.png')no-repeat center center;
 }
 body {  
 	font-family: 'Abel';
@@ -21,16 +28,18 @@ body {
  	margin-top: 0px;
  	margin-bottom: 0px;
  	font-weight: 900;
- 	font-size: 70px;
+ 	font-size: 105px;
+ 	color: white;
  }
  h5{
  	font-weight: 900;
  	background-color: #ffff80;
- 	width: inherit;
+ 	width: 202px;
  	padding-top: 4px;
  	padding-bottom: 4px;
  	padding-left: 4px;
  	font-size: 18px;
+ 	margin: auto;
  }
  h4{
  	font-size: 30px;
@@ -41,17 +50,18 @@ body {
  #cityName{
  	font-size: 24px;
  	font-family: 'Source Code Pro';
- 	width: 200px;
  	margin-top: 30px;
  	margin-bottom: 30px;
  }
  #cityMission{
  	font-family: 'Source Code Pro';
- 	color: black;
- 	font-size: 15px;
+ 	color: white;
+ 	font-size: 20px;
  	line-height: 24px;
  	margin-bottom: 25px;
- 	margin-left: -17px;
+ 	margin-left: -30px;
+ 	margin-right: -30px;
+ 	text-align: left;
  }
  .logo-container{
  	margin-top: 25px;
