added initial styling to header

--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,9 +1,9 @@
-<div class="navCustom">
-	<div class="col-xs-10">	
+<div class="navCustom hide">
+	<div class="col-xs-8">	
 		<h6>BAD</h6>
 		<h6>CITY</h6>
 	</div>
-	<div class="col-xs-2">
+	<div class="right-stuff col-xs-4">
 		<h6>{{points}}</h6>
 		<h6>All Time</h6>
 		<h6>This Weekend</h6>
@@ -68,5 +68,10 @@
 </ui-gmap-google-map>
 <div class="customFooter">
 	<p>2016 Bad Spring Creative</p>
-</div>	
+</div>
+<script>
+$( document ).ready(function() {
+	console.log('here');
+});	
+</script>	
  
