--- a/public/css/style.css
+++ b/public/css/style.css
@@ -142,6 +142,8 @@ body {
 	border-bottom-width: 1px;
 	border-bottom-color: gray;  
 	width: 100%;
+	background-color: white;
+	z-index: 1000; 
 }
 .arrow-container{
 	width: 15px;
@@ -156,4 +158,22 @@ body {
 }
 .lightning-container{
 	width: 20px;
+}
+.navCustom h6{
+	font-size: 16px;
+	font-family: 'Abel';
+   -webkit-text-stroke-width: 1.25px;
+   -webkit-text-stroke-color: black;	
+}
+.right-stuff h6{
+	font-family: 'Source Code Pro';
+	-webkit-text-stroke-width: 0px;
+	display: inline;
+	margin-left: 15px;
+	margin-right: 15px;
+	position: relative;
+	top: 22px;
+}
+.hide{
+	display: none;
 }
