--- a/public/views/home.html
+++ b/public/views/home.html
@@ -4,9 +4,9 @@
 		<h6>CITY</h6>
 	</div>
 	<div class="right-stuff col-xs-4">
-		<h6>{{points}}</h6>
-		<h6>All Time</h6>
-		<h6>This Weekend</h6>
+		<h6 id="pointsRemaining">{{points}}</h6>
+		<a ng-click="changeDare('all');" class="menu-item"><h6 class="strike">All Time</h6></a>
+		<a ng-click="changeDare('wknd');" class="menu-item"><h6 class="non-strike">This Weekend</h6></a>
 	</div>	
 </div>	
 <div class="purple-container row">
