added logic for popup

--- a/public/views/home.html
+++ b/public/views/home.html
@@ -55,6 +55,9 @@
 			</div>
 		</div>	
 	</div>
+</div>
+<div class="popup hide">
+	<h5>This lightning bolt will fill out when we've confirmed that you've completed the challenge. To confirm you've {{$scope.popupChallenge}} send a photo for proof to blakebutterworth@gmail.com</h5>
 </div>		
 <ui-gmap-google-map center="map.center" zoom="map.zoom" options="options">
         <ui-gmap-marker 
