--- a/public/css/style.css
+++ b/public/css/style.css
@@ -194,3 +194,22 @@ body {
 .red{
 	color: red;
 }
+.popup{
+	padding-top: 50px;
+	padding-bottom: 50px;
+	background-color: white;
+	z-index: 100;
+	width: 40%;
+	margin: auto;
+	position: fixed;
+	top: 300px;
+	text-align: center;
+	left: 50%;
+    /*margin-right: -50%;*/
+    transform: translate(-50%, 0);
+	box-shadow: 0px 0px 0px 9999px rgba(0, 0, 0, 0.8);    	
+}
+.popup h5{
+	background-color: white;
+	width: auto;
+}
