--- a/public/views/home.html
+++ b/public/views/home.html
@@ -57,7 +57,8 @@
 	</div>
 </div>
 <div class="popup hide">
-	<h5>This lightning bolt will fill out when we've confirmed that you've completed the challenge. To confirm you've {{$scope.popupChallenge}} send a photo for proof to blakebutterworth@gmail.com</h5>
+	<img src="http://www.reactiongifs.com/r/2013/06/I-dont-believe-you.gif"/>
+	<h5>This lightning bolt will fill out when we've confirmed that you've {{popupChallenge}}. To prove it, send a photo for to blakebutterworth@gmail.com</h5>
 </div>		
 <ui-gmap-google-map center="map.center" zoom="map.zoom" options="options">
         <ui-gmap-marker 
