hover for arrows - need to do lighting bold

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -213,3 +213,12 @@ body {
 	background-color: white;
 	width: auto;
 }
+.hover{
+	display: none;
+}
+.arrow-hover:hover .primary{
+	display: none;
+}
+.arrow-hover:hover .hover{
+	display: block;
+}
