--- a/public/views/home.html
+++ b/public/views/home.html
@@ -43,10 +43,16 @@
 			</div>
 				<div class="row button-dare">
 					<div class="arrow-container">
-						<a ng-click="upVote($index);"><img class="img-responsive" src="../assets/up.png"/></a>
+						<a class="arrow-hover" ng-click="upVote($index);">
+							<img class="img-responsive primary" src="../assets/up.png"/>
+							<img class="img-responsive hover" src="../assets/hoverup.png"/>	
+						</a>
 					</div>
 					<div class="arrow-container">	
-						<a ng-click="downVote($index);"><img class="img-responsive" src="../assets/down.png"/></a>
+						<a class="arrow-hover" ng-click="downVote($index);">
+							<img class="img-responsive primary" src="../assets/down.png"/>
+							<img class="img-responsive hover" src="../assets/hoverdown.png"/>
+						</a>
 					</div>	
 					<div class="arrow-container lightning-container">	
 						<a ng-click="lightning($index);"><img class="img-responsive" src="../assets/flash-lightning-bolt.png"/></a>
@@ -67,8 +73,7 @@
         	options="mark.options" 
         	idkey="mark.id">
         </ui-gmap-marker>    
-<!--         <ui-gmap-marker coords="marker.coords" options="marker.options" events="marker.events" idkey="marker.id">
-        </ui-gmap-marker>    -->     
+r    
 </ui-gmap-google-map>
 <div class="customFooter">
 	<p>2016 Bad Spring Creative</p>
