--- a/public/css/style.css
+++ b/public/css/style.css
@@ -177,7 +177,7 @@ body {
 .right-stuff h6{
 	font-family: 'Source Code Pro';
 	-webkit-text-stroke-width: 0px;
-	display: inline;
+	display: inline-block;
 	margin-left: 15px;
 	margin-right: 15px;
 	position: relative;
@@ -222,4 +222,40 @@ body {
 }
 .arrow-hover:hover .hover{
 	display: block;
+}
+@media only screen and (max-width : 935px) {
+	.DARES{
+		width: 100%;
+	}
+}
+@media only screen and (max-width : 510px) {
+	.logo-tagline-container {
+		width: 100%;
+	}	
+	#cityMission{
+		margin: auto;
+		text-align: center;
+	}
+	.mobile-nix{
+		display: none;
+	}
+	.navCustom{
+		height: 68px;
+	}
+	.individual-dare{
+		padding: 0px 0px;
+		margin-left: 0px;
+		margin-right: 0px;
+	}
+	.individual-dare .row{
+		margin-right: 0px;
+		margin-left: 0px;
+	}
+	.challenges{
+		margin-left: 0px;
+		margin-right: 0px;
+	}
+	.logo-tagline-container h4{
+		font-size: 30px;
+	}
 }
