--- a/public/views/home.html
+++ b/public/views/home.html
@@ -69,7 +69,9 @@
 <div class="popup hide">
 	<img src="http://www.reactiongifs.com/r/2013/06/I-dont-believe-you.gif"/>
 	<h5>This lightning bolt will fill out when we've confirmed that you've {{popupChallenge}}. To prove it, send a photo for to blakebutterworth@gmail.com</h5>
-</div>		
+</div>
+<!-- <div class="white-box">
+</div>	 -->	
 <ui-gmap-google-map center="map.center" zoom="map.zoom" options="options">
         <ui-gmap-marker 
         	ng-repeat="mark in marker"
