--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,10 +1,10 @@
 <div class="navCustom hide">
-	<div class="mobile-nix col-xs-2 col-sm-8">	
+	<div class="mobile-nix col-xs-2 col-sm-7">	
 		<h6>BAD</h6>
 		<h6>CITY</h6>
 	</div>
-	<div class="right-stuff col-xs-12 col-sm-4">
-		<h6 id="pointsRemaining">{{points}}</h6>
+	<div class="right-stuff col-xs-12 col-sm-5">
+		<h6 id="pointsRemaining">Your points: {{points}}</h6>
 		<a ng-click="changeDare('all');" class="menu-item"><h6 class="strike">All Time</h6></a>
 		<a ng-click="changeDare('wknd');" class="menu-item"><h6 class="non-strike">This Weekend</h6></a>
 	</div>	
