--- a/public/views/home.html
+++ b/public/views/home.html
@@ -68,7 +68,9 @@
 </div>
 <div class="popup hide">
 	<img src="http://www.reactiongifs.com/r/2013/06/I-dont-believe-you.gif"/>
-	<h5>This lightning bolt will fill out when we've confirmed that you've {{popupChallenge}}. To prove it, send a photo for to blakebutterworth@gmail.com</h5>
+	<h5>This lightning bolt will fill out yellow when we've confirmed that you've done this:</h5>
+	<h5> {{popupChallenge}}</h5> 
+	<h5>To prove it send me a photo: via email: blakebutterworth@gmail.com, twitter: @blakebutterwort, instagram: @butterpunk, of facebook: blake butterworth</h5>
 </div>
 <!-- <div class="white-box">
 </div>	 -->	
