--- a/public/views/home.html
+++ b/public/views/home.html
@@ -4,7 +4,7 @@
 		<h6>CITY</h6>
 	</div>
 	<div class="right-stuff col-xs-12 col-sm-5">
-		<h6 id="pointsRemaining">{{points}}</h6>
+		<h6 id="pointsRemaining"><span class="mobile-nix">Your Points:</span>{{points}}</h6>
 		<a ng-click="changeDare('all');" class="menu-item"><h6 class="strike">Allways</h6></a>
 		<a ng-click="changeDare('wknd');" class="menu-item"><h6 class="non-strike">This Weekend</h6></a>
 	</div>	
