--- a/public/views/home.html
+++ b/public/views/home.html
@@ -49,18 +49,22 @@
 							<img class="img-responsive hover" src="../assets/hoverup.png"/>	
 						</a>
 					</div>
+					<a ng-click="downVote($index);">
 					<div class="arrow-container">	
 						<a class="arrow-hover" ng-click="downVote($index);">
 							<img class="img-responsive primary" src="../assets/down.png"/>
 							<img class="img-responsive hover" src="../assets/hoverdown.png"/>
 						</a>
-					</div>	
+					</div>
+					</a>
+					<a ng-click="lightning($index);">	
 					<div class="arrow-container lightning-container">	
 						<a class="arrow-hover" ng-click="lightning($index);">
 							<img class="img-responsive primary" src="../assets/flash-lightning-bolt.png"/>
 							<img class="img-responsive hover" src="../assets/hoverbolt.png"/>							
 						</a>
-					</div>						
+					</div>
+					</a>						
 				</div>
 			</div>
 		</div>	
