popup scroll fix

--- a/public/views/home.html
+++ b/public/views/home.html
@@ -44,7 +44,7 @@
 			</div>
 				<div class="row button-dare">
 					<div class="arrow-container">
-						<a class="arrow-hover" ng-click="upVote($index);">
+						<a ng-click="upVote($index);">
 							<img class="img-responsive primary" src="../assets/up.png"/>
 							<img class="img-responsive hover" src="../assets/hoverup.png"/>	
 						</a>
