--- a/public/views/home.html
+++ b/public/views/home.html
@@ -51,7 +51,7 @@
 					</div>
 					<a ng-click="downVote($index);">
 					<div class="arrow-container">	
-						<a class="arrow-hover" ng-click="downVote($index);">
+						<a  ng-click="downVote($index);">
 							<img class="img-responsive primary" src="../assets/down.png"/>
 							<img class="img-responsive hover" src="../assets/hoverdown.png"/>
 						</a>
