popup scroll fix

--- a/public/views/home.html
+++ b/public/views/home.html
@@ -49,9 +49,9 @@
 							<img class="img-responsive hover" src="../assets/hoverup.png"/>	
 						</a>
 					</div>
-					<a ng-click="downVote($index);">
+					<a style="z-index: 100000; display:block;" ng-click="downVote($index);">
 					<div class="arrow-container">	
-						<a style="z-index: 10000000;" class="arrow-hover" ng-click="downVote($index);">
+						<a  class="arrow-hover" ng-click="downVote($index);">
 							<img class="img-responsive primary" src="../assets/down.png"/>
 							<img class="img-responsive hover" src="../assets/hoverdown.png"/>
 						</a>
