--- a/public/css/style.css
+++ b/public/css/style.css
@@ -230,6 +230,11 @@ body {
 .mobile{
 	display: none;
 }
+.exit-container{
+	position: absolute;
+	top: 7px;
+	right: 16px;
+}
 @media all and (min-width: 900px) {
 .arrow-hover:hover .primary{
 	display: none;
