Map markers and Form
markers now added in call to get api/challenges and form so we can add
challenges to test

--- a/public/views/geek.html
+++ b/public/views/geek.html
@@ -3,3 +3,14 @@
 
 	<p>{{ tagline }}</p>
 </div>
+<body>
+<form action="/api/challenges" method="POST">
+<h2>Create a Challenge (I dare you)</h2>
+  <input type="text" placeholder="place" name="place">
+  <input type="text" placeholder="points" name="points">
+  <input type="text" placeholder="description" name="description">
+  <input type="text" placeholder="lat" name="lat">
+  <input type="text" placeholder="long" name="long">
+  <button type="submit">Submit</button>
+</form>
+</body>
