--- a/public/views/geek.html
+++ b/public/views/geek.html
@@ -13,4 +13,19 @@
   <input type="text" placeholder="long" name="long">
   <button type="submit">Submit</button>
 </form>
+
+<form action="/signup" method="POSt">
+	<h2>SIGNUP</h2>
+  <input type="text" placeholder="email" name="email">
+  <input type="text" placeholder="password" name="password">
+  <button type="submit">Submit</button>
+</form>
+
+<form action="/login" method="POSt">
+	<h2>LOGIN</h2>
+  <input type="text" placeholder="email" name="email">
+  <input type="text" placeholder="password" name="password">
+  <button type="submit">Submit</button>
+</form>
+
 </body>
