--- a/public/views/nerd.html
+++ b/public/views/nerd.html
@@ -1,5 +1,5 @@
 <div class="jumbotron text-center">
-	<h1>Nerds and Proud</h1>
+	<h1>THIS IS THE PAGE YOU'LL SEE IF YOURE LOGGED IN</h1>
 
 	<p>{{ tagline }}</p>
 </div>
