--- a/public/views/home.html
+++ b/public/views/home.html
@@ -84,19 +84,19 @@
 </div>
 <div class="loginpopup hide">
 	<h5>You must Be logged in to do this</h5>
-	<form action="/signup" method="POSt">
 		<h2>SIGNUP</h2>
-	  <input type="text" placeholder="email" name="email">
-	  <input type="text" placeholder="password" name="password">
-	  <button type="submit">Submit</button>
-	</form>
+		<div class="form-group">
+		    <label for="exampleInputEmail1">Email address</label>
+		    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+		    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+		  </div>
+		  <div class="form-group">
+		    <label for="exampleInputPassword1">Password</label>
+		    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+		  </div>
+		  <h6 id="errorText" class="text-muted">{{errormessage}}</h6>
+	  <a ng-click="user('signup');"><button class="btn-primary">Submit</button></a><a ng-click="user('login');"><button class="btn-primary">Login</button></a>
 
-	<form action="/login" method="POSt">
-		<h2>LOGIN</h2>
-	  <input type="text" placeholder="email" name="email">
-	  <input type="text" placeholder="password" name="password">
-	  <button type="submit">Submit</button>
-	</form>
 </div>
 <!-- <div class="white-box">
 </div>	 -->	
