--- a/public/views/home.html
+++ b/public/views/home.html
@@ -4,8 +4,9 @@
 		<h6>CITY</h6>
 	</div>
 	<div class="right-stuff col-xs-12 col-sm-5">
-		<a ng-click="login();"><h6>Login/Signup</h6></a>
-		<!-- <h6 id="pointsRemaining"><span class="mobile-nix">Your Points:</span>{{points}}</h6> -->
+
+		<a ng-show="!isLogged" ng-click="login();"><h6>Login/Signup</h6></a>
+		<h6 ng-show="isLogged" id="pointsRemaining"><span class="mobile-nix">Your Points:</span>{{points}}</h6> 
 		<a ng-click="changeDare('all');" class="menu-item"><h6 class="strike">Always</h6></a>
 		<a ng-click="changeDare('wknd');" class="menu-item"><h6 class="non-strike">This Weekend</h6></a>
 	</div>	
@@ -95,7 +96,7 @@
 		    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
 		  </div>
 		  <h6 id="errorText" class="text-muted">{{errormessage}}</h6>
-	  <a ng-click="user('signup');"><button class="btn-primary">Submit</button></a><a ng-click="user('login');"><button class="btn-primary">Login</button></a>
+	  <a ng-click="user('signup');"><button class="btn-primary">Sign Up</button></a><a ng-click="user('login');"><button class="btn-primary">Login</button></a>
 
 </div>
 <!-- <div class="white-box">
