letting you exit out of login box

--- a/public/views/home.html
+++ b/public/views/home.html
@@ -84,8 +84,13 @@
  -->	<h5>To prove it send me a photo: blakebutterworth@gmail.com, or instagram: @butterpunk</h5>
 </div>
 <div class="loginpopup hide">
+	<div class="exit-container">
+		<a ng-click="exitlogin();">
+			<img src="../assets/exit-icon.png"/>
+		</a>
+	</div>
 	<h5>You must Be logged in to do this</h5>
-		<h2>SIGNUP</h2>
+		<h2>Login or Signup</h2>
 		<div class="form-group">
 		    <label for="exampleInputEmail1">Email address</label>
 		    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
