got the marker click event working

--- a/public/views/home.html
+++ b/public/views/home.html
@@ -121,7 +121,8 @@
         	ng-repeat="mark in marker"
         	coords="mark.coords" 
         	options="mark.options" 
-        	idkey="mark.id">
+        	idkey="mark.id"
+        	events="map.event">
         </ui-gmap-marker>    
 r    
 </ui-gmap-google-map>
