--- a/public/css/style.css
+++ b/public/css/style.css
@@ -185,7 +185,7 @@ body {
 	margin-left: 15px;
 	margin-right: 15px;
 	position: relative;
-	top: 22px;
+	top: 5px;
 }
 .hide{
 	display: none;
@@ -282,6 +282,15 @@ body {
 	position: absolute;
 	top: 7px;
 	right: 16px;
+}
+#signupbutton{
+	border-style: solid;
+	border-width: 1px;
+	padding-bottom: 10px;
+	padding-top: 10px;
+	padding-right: 8px;
+	padding-left: 8px;
+	border-radius: 5px;
 }
 @media all and (min-width: 900px) {
 .arrow-hover:hover .primary{
