--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,17 +1,24 @@
 <div class="navCustom">
-	<div class="mobile-nix col-xs-2 col-sm-7">	
+	<div class="col-xs-2 col-sm-5">	
 		<h6>BAD</h6>
 		<h6>CITY</h6>
 	</div>
-	<div class="right-stuff col-xs-12 col-sm-5">
-
-		
-		<h6 ng-show="isLogged" id="pointsRemaining"><span class="mobile-nix">Your Points:</span>{{points}}</h6> 
-		<a ng-click="changeDare('all');" class="menu-item"><h6 class="strike">ALWAYS</h6></a>
-		<a ng-click="changeDare('wknd');" class="menu-item"><h6 class="non-strike">THIS WEEKEND</h6></a>
-		<a ng-show="isLogged" ng-click="logoutPopup();"><h6>(Logout)</h6></a>
-		<a ng-show="!isLogged" ng-click="loginPopup();"><h6>LOGIN</h6></a>
-		<a  ng-show="!isLogged" ng-click="loginPopup();"><h6 id="signupbutton">JOIN</h6></a>
+	<div class="right-stuff col-xs-10 col-sm-7">
+			<div style="float: right;">
+				<div class="otherNav" style="display: inline-block;">
+					<h6 class="mobile-nix" ng-show="isLogged" id="pointsRemaining"><span>Your Points:</span>{{points}}</h6> 
+					<a ng-click="changeDare('all');" class="menu-item mobile-nix"><h6 class="strike">ALWAYS</h6></a>
+					<a ng-click="changeDare('wknd');" class="menu-item mobile-nix"><h6 class="non-strike">THIS WEEKEND</h6></a>
+					<a ng-show="isLogged" ng-click="logoutPopup();" class="mobile-nix"><h6>(Logout)</h6></a>
+					<a ng-show="!isLogged" ng-click="loginPopup();" class="mobile-nix"><h6>LOGIN</h6></a>
+			</div>
+			<div class="nav-mobile" style="display: inline-block;">
+				<a  ng-show="!isLogged" ng-click="loginPopup();"><h6 id="signupbutton">JOIN</h6></a>
+				<a href="#" class="btn btn-info btn-sm desktop-nix">
+	    			<span class="glyphicon glyphicon-menu-hamburger"></span>
+				</a>
+			</div>
+			</div>
 	</div>	
 </div>	
 <div class="purple-container row">
