--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,6 +8,20 @@ a:hover{
 	text-decoration: inherit;
 	color:inherit;
 }
+.subNavMobile{
+	position: fixed;
+	top: 68px;
+	background-color: rgba(0, 0, 0, 0.8);
+	color: white;
+	width: 100%;
+	height: 100%;
+	float: right;
+	text-align: right;
+	padding-right: 10px;
+}
+.subNavMobile h6{
+	font-size: 24px;
+}
 .logo-tagline-container{
 	width: 500px;
 	margin: auto;
