styled header - mobile

--- a/public/views/home.html
+++ b/public/views/home.html
@@ -39,7 +39,7 @@
 		</div>
 	</div>			
 </div>	
-	<div class="subNavMobile">
+	<div class="hide subNavMobile">
 		<h6 ng-show="isLogged" id="pointsRemaining"><span>Your Points:</span>{{points}}</h6> 
 		<a ng-click="changeDare('all');" class="menu-item"><h6 class="strike">ALWAYS</h6></a>
 		<a ng-click="changeDare('wknd');" class="menu-item"><h6 class="non-strike">THIS WEEKEND</h6></a>
