--- a/public/css/style.css
+++ b/public/css/style.css
@@ -217,6 +217,17 @@ body {
 .red{
 	color: red;
 }
+.mapPopUp{
+	padding-top: 15px;
+	padding-bottom: 15px;
+    background-color: gray;
+    color: white;
+    font-family: 'Source Code Pro';
+    text-align: center;
+}
+.mapPopUp h6{
+	font-size: 30px;
+}
 .popup{
 	padding-top: 50px;
 	padding-bottom: 50px;
